添加二级菜单

--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
         </head>
     <body>
         <h1>你好</h1>
+        <div>
+            <ul>
+                <li>手机
+                    <ul>
+                        <li>OPPO</li>
+                        <li>华为</li>
+                    </ul>>
+                </li>
+                <li>电脑</li>
+            </ul>
+        </div>
     </body>
 </html>
 <!--
